--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -153,7 +153,7 @@ last few years, there was an explosion in the number of works at the interface
 of the HPC and Big Data fields, dealing with learning algorithms. Recent
 sophisticated approaches developed \textit{ad hoc} supervised machine learning
 algorithms for reducing uncertainty in problem parameters (e.g.,\ job execution
-times ~\cite{learningruntimes}, memory requirements, etc.). However, only few studies
+times~\cite{learningruntimes}, memory requirements, etc.). However, only few studies
 evaluate the impact of such techniques on the performances of the resource
 manager.
 
@@ -183,7 +183,7 @@ multi-armed bandit algorithm, which derives feedback by measuring system
 performance.
 
 Both of these methods are evaluated with a specifically developed simulator,
-which is open-sourced ~\cite{ocst}.
+which is open-sourced~\cite{ocst}.
 
 Our main results are as follows: The approach based on the simulator provides
 very good results, close to the best policy in the search set. In essence, we
@@ -216,15 +216,15 @@ problem (~\cite{Frachtenberg:2009:JSS:1692356,Feitelson:2004:PJS:2128864.2128865
 whose practical ramifications, varying hypotheses, and inherent uncertainty of
 the problem applied to the HPC field have driven practitioners to use simple
 heuristics (and researchers to study their behavior). The two most popular
-heuristics for HPC platforms are EASY ~\cite{easy} and
-Conservative ~\cite{Mu'alem:2001:UPW:380314.380315} backfilling.
+heuristics for HPC platforms are EASY~\cite{easy} and
+Conservative~\cite{mualem_utilization_2001} backfilling.
 
-While Conservative Backfilling offers many advantages ~\cite{bfchar}, it has a
+While Conservative Backfilling offers many advantages~\cite{bfchar}, it has a
 significant computational overhead and is more complex, which mainly explains
-why many of the machines of the top500 ranking ~\cite{top500} rather use a
+why many of the machines of the top500 ranking~\cite{top500} rather use a
 variant of EASY-Backfilling instead. There is a large body of work seeking to
 improve/tune EASY. Indeed, while the basic mechanism is used by some actual
-resource and job management software (most notably SLURM ~\cite{SLURMdocSCHED}),
+resource and job management software (most notably SLURM~\cite{SLURMdocSCHED}),
 this is seldom done without fine tuning by system administrators.
 
 The original EASY mechanism refers to a First-Come-First-Serve basis.  Several
@@ -236,35 +236,35 @@ address the dependency of scheduling metrics on the workload
 ~\cite{variability}. These studies most often report \textit{post-hoc}
 performance since they compare algorithms after the workload is known.
 
-The dynP scheduler ~\cite{streit_selftuning_2002} suggests a systematic method
+The dynP scheduler~\cite{streit_selftuning_2002} suggests a systematic method
 to tuning these queues. The algorithm requires simulated scheduling runs at
 decision time, therefore the time-to-decision of the scheduling is higher than
 that of EASY. The adaptation of EASY was studied under a different framework
-than ours in ~\cite{talby2005improving}. Other works study the reservation
-mechanism ~\cite{srinivasan2002selective}. Online portfolio approaches are also
-studied for the cloud setting ~\cite{deng2013exploring}.
+than ours in~\cite{talby2005improving}. Other works study the reservation
+mechanism~\cite{srinivasan2002selective}. Online portfolio approaches are also
+studied for the cloud setting~\cite{deng2013exploring}.
 
 \subsection{Data-aware Resource Management.}
 
 There was a recent focus on leveraging the huge amount of data available in
 large scale computing platforms to improve system performance. Some
 works use collaborative filtering to co-locate tasks in clouds by estimating
-application interference ~\cite{7516031}. Some others are closer to the
-application level. For instance,  ~\cite{fmodeling} uses binary classification
+application interference~\cite{7516031}. Some others are closer to the
+application level. For instance, ~\cite{fmodeling} uses binary classification
 to distinguish benign memory faults from application errors so as to execute
 recovery algorithms.
 
 Several works use similar techniques in the context of HPC, in
-particular ~\cite{Tsafrir_easypp_2005,learningruntimes}, hoping that better job
-runtime estimations should improve the scheduling ~\cite{chiang_impact_2002}.
+particular~\cite{Tsafrir_easypp_2005,learningruntimes}, hoping that better job
+runtime estimations should improve the scheduling~\cite{chiang_impact_2002}.
 Some algorithms estimate runtime distributions model and choose jobs using
-probabilistic integration procedures ~\cite{Nissimov2008}. However, these works
+probabilistic integration procedures~\cite{Nissimov2008}. However, these works
 do not address the duality between the cumulative and maximal scheduling costs,
-as mentioned in ~\cite{learningruntimes}. While these previous works intend to
+as mentioned in~\cite{learningruntimes}. While these previous works intend to
 estimate uncertain parameters, we consider here a more pragmatic approach,
 that directly learns a good scheduling policy from a given policy space.
 
-Existing work ~\cite{jsspp17} takes this approach offline, by
+Existing work~\cite{jsspp17} takes this approach offline, by
 splitting workload data in a training/testing fashion. This work studies
 EASY-Backfilling and shows that while the relative performance of some well-known
 priority orders for starting jobs differs between workloads, it is relatively
@@ -273,7 +273,7 @@ stable over time for a given workload.
 \subsection{Multi-Armed Bandits.}
 
 A multi-armed bandit (MAB) problem is a sequential allocation problem with
-partially observable rewards ~\cite{bubnow}. At every round an action, called an
+partially observable rewards~\cite{bubnow}. At every round an action, called an
 "arm" in the literature, must be chosen from a fixed set and the corresponding
 reward is observed. The goal of a MAB algorithm is to maximize the total reward
 obtained in a successive number of rounds. This is essentially achieved using a
@@ -281,16 +281,16 @@ combination of explorative actions, which help estimate the quality of each
 arm, and of exploitative actions, which leverage the current estimates by using
 a good arm. This problem can be addressed using various hypotheses. Most common
 are the (original) stochastic setting and the adversarial setting of regret
-minimization. See ~\cite{thompson} for the original work on the stochastic
-setting and ~\cite{Auer2002} for the ''Upper Confidence Bound`` family of
-algorithms. To the best of our knowledge, the work of ~\cite{Banos} is the
-earliest for the adversarial setting; see ~\cite{nonstoch} for the
-``Exponential-weight'' family of algorithms. We refer to ~\cite{bubnow} for a
+minimization. See~\cite{thompson} for the original work on the stochastic
+setting and~\cite{Auer2002} for the ''Upper Confidence Bound`` family of
+algorithms. To the best of our knowledge, the work of~\cite{Banos} is the
+earliest for the adversarial setting; see~\cite{nonstoch} for the
+``Exponential-weight'' family of algorithms. We refer to~\cite{bubnow} for a
 comprehensive review of the field. While these algorithms bound the cumulative
 difference in loss to the best arm (the regret), they have functional
 constraints such as the fact that the rewards should be contained in a range.
 The simple heuristic called \textit{Epsilon-Greedy} introduced
-in ~\cite{Auer2002} does not have this requirement. For this reason, this
+in~\cite{Auer2002} does not have this requirement. For this reason, this
 heuristic will be used in this paper and is described in
 Subsection~\ref{sub:bandit}.
 
@@ -348,7 +348,7 @@ the provided value.
 The selection of the job to run is performed according to a scheduling policy,
 which determines the order the jobs are executed. EASY-Backfilling is
 the most widely used policy due to its simple and robust implementation and
-known benefits such as high system utilization ~\cite{easy}. This strategy has
+known benefits such as high system utilization~\cite{easy}. This strategy has
 no worst case guarantee beyond the absence of starvation (i.e.\ every job will
 be scheduled at some moment).
 
@@ -392,13 +392,13 @@ queue is ordered in FCFS order in the original heuristic, it is possible to
 reorder it at will. We focus on a search space of 12 reordering policies.
 
 \begin{enumerate}
-  \item FCFS: First-Come First-Serve, which is the most commonly used policy ~\cite{easy}.
+  \item FCFS: First-Come First-Serve, which is the most commonly used policy~\cite{easy}.
   \item LCFS: Last-Come First-Serve.
-  \item SPF: Smallest estimated Processing time $\widetilde{p_{j}}$ First ~\cite{bfchar}.
+  \item SPF: Smallest estimated Processing time $\widetilde{p_{j}}$ First~\cite{bfchar}.
   \item LPF: Longest estimated Processing time First.
   \item LQF: Largest resource requirement $q_j$ First.
   \item SQF: Smallest resource requirement First.
-  \item LEXP: Largest Expansion Factor First ~\cite{bfchar}, where the expansion
+  \item LEXP: Largest Expansion Factor First~\cite{bfchar}, where the expansion
     factor is defined as follows:
   \begin{equation} \frac{wait_j + \widetilde{p_j}}{\widetilde{p_j}} \end{equation}
     where $wait_j$ is the time job $j$ has been waiting until the time at which the decision is taken.
@@ -488,11 +488,11 @@ during the whole period.
 We further assume that there is a certain regularity among periods, i.e.\ that
 the distribution of the job submission process does not radically differ
 between consecutive periods. This assumption is validated in the study
-presented in ~\cite{jsspp17}. It further entails that the behavior of a policy
+presented in~\cite{jsspp17}. It further entails that the behavior of a policy
 during the previous periods reflects its behavior on the current one, so that
 the selection of a policy can be based on its past behavior. However, there may
 be some variability between different periods for certain cost
-metrics ~\cite{feitelson2001metrics}. This is illustrated in
+metrics~\cite{feitelson2001metrics}. This is illustrated in
 Figure~\ref{fig:variability} which displays the average waiting time of various
 policies for the KTH-SP2 trace (see~\ref{sub:traces} for a description of the
 workloads) using weekly periods encompassing one year. As one can note, the
@@ -508,7 +508,7 @@ is easier than in the space of the original problem. It is important to note,
 however, that a pure reinforcement learning approach is difficult to develop in
 our context. Indeed, while we have outlined a reduced action space, the state
 space to consider is infinite. This is not prohibitive \textit{per se}, as
-modern methods ~\cite{aprl} can bypass dimensionality issues via function
+modern methods~\cite{aprl} can bypass dimensionality issues via function
 approximation. However, these methods rely on large amounts of batch data, and
 we are facing an online problem with no pre-existing data\footnote{The
 reinforcement learning literature uses the term ``\textit{on-policy}'' for this
@@ -608,7 +608,7 @@ Eq.~\eqref{eq:cost-exact} by rescaling it, either down or up:
 where $\rho_t^i$ is uniformly sampled in the interval $[0.80,1.20]$, thus
 adding a +/- 20\% multiplicative noise on the waiting time estimated by the
 simulator.  This value is taken as to be sufficiently larger than values
-previously reported, see e.g. ~\cite{dutot:hal-01333471} which reports 2
+previously reported, see e.g.~\cite{dutot:hal-01333471} which reports 2
 percent variations of the simulated metric compared to the metric on the real
 systems.  The overall cost is then defined in the same way as before, leading
 to:
@@ -646,7 +646,7 @@ Thus, we explore here a more efficient strategy that dispenses with estimating
 the cost of all policies at a given time and only updates the cost of the
 policy that is currently being used. This strategy makes use of the
 $\epsilon$-greedy exploration method, standard in reinforcement learning
-~\cite{Watkins:1989} and bandit problems ~\cite{Auer2002}, to trade-off
+~\cite{Watkins:1989} and bandit problems~\cite{Auer2002}, to trade-off
 exploitation and exploration, and relies, as before, on past estimates of the
 cost to select the best policy in the exploitation mode.
 
@@ -708,12 +708,12 @@ P = \mbox{argmin}_{P_i, 1 \le i \le 12} w_{\mbox{epsilon}}(\rightarrow T;P_i)
 
 Figure~\ref{fig:bandit} illustrates this process. Several studies study the
 decay of $\epsilon$ over time, the exploration being less important once the
-estimates for the different policies are reliable ~\cite{Tokic:2010}. This
+estimates for the different policies are reliable~\cite{Tokic:2010}. This
 strategy has however not been beneficial in our case. We believe this is due to
 the properties of the traces we use, as explained in
 Section~\ref{sec:experiments}. The $\epsilon$-greedy strategy is known to be
 outperformed in terms of regret by other classical algorithms such as the UCB
-or EXP family of algorithms (see ~\cite{bubnow}). See ~\cite{bubnow} for a precise definition and
+or EXP family of algorithms (see~\cite{bubnow}). See~\cite{bubnow} for a precise definition and
 thorough treatment of this subject. These algorithms however all rely on
 pre-normalized rewards. Here, the scale of $w_{\epsilon}(t;P_i)$ is not known
 in advance. While the usual doubling tricks can be devised to go around
@@ -780,10 +780,10 @@ The experimental validation performed in this work uses a mixture of small and
 large systems from different periods. These platforms are all targeted by this
 work, since they all are homogenous systems that run a batch scheduler.
 Table~\ref{tab:logs} presents the 7 logs, which can all be obtained from the
-Parallel Workload Archive ~\cite{Feitelson20142967}. We use the
-``cleaned'' ~\cite{pwa-clean} version of the logs as per the archive. We impose
+Parallel Workload Archive~\cite{Feitelson20142967}. We use the
+``cleaned''~\cite{pwa-clean} version of the logs as per the archive. We impose
 an additional filtering step to the workloads\footnote{This filtering step is
-available in the reproducible workflow ~\cite{repro} as shell script
+available in the reproducible workflow~\cite{repro} as shell script
 \lstinline[basicstyle=\ttfamily\color{blue}]|misc/strong\_filter|} in order to
 clean erroneous data:
 
@@ -808,7 +808,7 @@ raises a trade-off between precision and runtime. High precision can be
 obtained by carefully modeling the platform and its network topology, or
 extracting information from the jobs from their sources or post-mortem logs.
 This is the approach used by high-fidelity batch scheduling simulators such as
-BatSim ~\cite{batsim}. In the present work, the focus is on studying the
+BatSim~\cite{batsim}. In the present work, the focus is on studying the
 EASY-Backfilling mechanism in itself, without addressing the allocation
 problem. Moreover, the experimental protocol used here requires many
 simulation runs. Therefore, we set the precision/runtime trade-off at the
@@ -817,7 +817,7 @@ information relative to the platform and use the job processing times of the
 original workloads. In this setup, the processors are considered to be
 undistinguishable from each other, and jobs can be discontinuously mapped to
 any available processor on the system. During this work, we developed a
-lightweight simulator ~\cite{ocst} and now release it to the community along with
+lightweight simulator~\cite{ocst} and now release it to the community along with
 this article. See the reproducibility paragraph below for more information.
 With this simulator, we are able to replay EASY-FCFS on the CEA-CURIE trace in
 33 seconds with a machine equipped with an Intel(R) Core(TM) i5-4310U CPU @
@@ -831,18 +831,18 @@ preparation and statistical analysis code.
 \label{ssub:resampling}
 
 Comparing algorithms in batch scheduling is made especially difficult by the
-fluctuations in commonly used metrics ~\cite{feitelson1998metrics}. The variability in
+fluctuations in commonly used metrics~\cite{feitelson1998metrics}. The variability in
 performance is known to outrank the available sample sizes: \textit{It is not
 enough to simply replay an algorithm using a workload trace}. Indeed, as
 presented in Figure~\ref{fig:variability}, the objective function we are using
 in this work is subject to high variability. In our experience, randomly
 shuffling months in a trace at random is enough to generate contradictory
 conclusions about which algorithm is better. This is a known
-problem ~\cite{flurries} that motivated decades of research in workload
-modeling ~\cite{feitbook}. Workload models have drawbacks in that they usually
+problem~\cite{flurries} that motivated decades of research in workload
+modeling~\cite{feitbook}. Workload models have drawbacks in that they usually
 lose the details of the workloads. This is problematic due to the non-linear
 aspect of the job scheduling process. This is discussed
-in ~\cite{feitresampling}, an approach that attempts to solve this problem by
+in~\cite{feitresampling}, an approach that attempts to solve this problem by
 resampling data directly from the original traces. In this work, we use a
 simple implementation of these ideas. More precisely, we want to sample the job
 submission process, which is achieved in the following manner: (a) For every
@@ -874,7 +874,7 @@ considered, we use the original data to resample 60 traces, each with a length
 of two years. For each resampled trace, we run simulations using the
 EASY($P,\Theta$) scheduling heuristic. We fix the value of the job waiting time
 threshold $\Theta$ at 40 hours. The choice of this default
-stems from the analysis developed in ~\cite{jsspp17}. Essentially, this value is high
+stems from the analysis developed in~\cite{jsspp17}. Essentially, this value is high
 enough for queue reorderings to be leveraged while being low enough to provide
 the functional requirement of preventing starvation. We simulate
 EASY($P,\Theta=40h$) using the following strategies:
@@ -947,14 +947,14 @@ lightweight simulator in the context of this research.
 
 \subsection{Replicability}
 
-We publish a declarative workflow ~\cite{repro} based on our
-simulator ~\cite{ocst} that runs experiments and generates all the figures from
+We publish a declarative workflow~\cite{repro} based on our
+simulator~\cite{ocst} that runs experiments and generates all the figures from
 this paper.
 
 There are various approaches for ensuring computational experiments are replicable,
 among which distributing complete operating system images, containers, or
 packaging software. As our experiments are CPU bound, we decide to opt for the
-software packaging approach ~\cite{nix}. This allows to replicate the experiments on
+software packaging approach~\cite{nix}. This allows to replicate the experiments on
 clusters where virtualization is not available or kernels are too old for
 containers and decreases simulation runtime.
 
@@ -969,7 +969,7 @@ The archive containing the experimental workflow can be obtained at:
 https://github.com/freuk/obps
 \end{lstlisting}
 
-All the code associated with this work is released under the ISC ~\cite{isc}
+All the code associated with this work is released under the ISC~\cite{isc}
 license.
 Running the experiments can be done
 on any platform equipped with the Nix package manager by running at the root of
@@ -986,9 +986,9 @@ this reason, the experimental workflow was designed to be executed on
 a single host.
 
 All data from this paper were obtained from the Swf Parallel Workloads
-Archive ~\cite{Feitelson20142967}. 
+Archive~\cite{Feitelson20142967}. 
 
- All experiments are tied together using zymake ~\cite{zymake}, a minimalistic
+ All experiments are tied together using zymake~\cite{zymake}, a minimalistic
  workflow system designed for computational experiments\footnote{The zymake system
  is also packaged by our nix expressions.}. This system is
  analogous to a traditional build system with added workflow capabilities. The
@@ -1006,8 +1006,8 @@ Archive ~\cite{Feitelson20142967}.
 
    \item Simulation. This step runs the lightweight ocaml backfilling
      simulator specially written for this work. This simulator is made
-     available under the ISC ~\cite{isc} license as a persistent zenodo
-     archive at ~\cite{ocst}.
+     available under the ISC~\cite{isc} license as a persistent zenodo
+     archive at~\cite{ocst}.
 
    \item Analysis of the results. This step runs R code that generates the
      figures presented in this paper.
